--- a/src/frontend/apps/impress/package.json
+++ b/src/frontend/apps/impress/package.json
@@ -50,6 +50,7 @@
     "react-dom": "*",
     "react-i18next": "15.5.2",
     "react-intersection-observer": "9.16.0",
+    "react-markdown": "^8.0.6",
     "react-select": "5.10.1",
     "styled-components": "6.1.18",
     "use-debounce": "10.0.4",
@@ -73,7 +74,7 @@
     "cross-env": "7.0.3",
     "dotenv": "16.5.0",
     "eslint-config-impress": "*",
-    "fetch-mock": "9.11.0",
+    "fetch-mock": "^12.5.2",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "node-fetch": "2.7.0",
