--- a/src/frontend/apps/impress/package.json
+++ b/src/frontend/apps/impress/package.json
@@ -41,6 +41,7 @@
     "i18next": "25.2.1",
     "i18next-browser-languagedetector": "8.1.0",
     "idb": "8.0.3",
+    "katex": "^0.16.22",
     "lodash": "4.17.21",
     "luxon": "3.6.1",
     "next": "15.3.2",
