--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -38,5 +38,8 @@
     "react-dom": "19.1.0",
     "typescript": "5.8.3",
     "yjs": "13.6.27"
+  },
+  "dependencies": {
+    "remove-markdown": "^0.6.2"
   }
 }
